# figuresTestTutorial

./: CMakeLists.txt  README.md
calculator/: CMakeLists.txt  FiguresCalculator.cpp  FiguresCalculator.h
figures/: CMakeLists.txt  Circle.cpp  Circle.h  IFigure.h  Rectange.cpp  Rectange.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  round.cpp  round.h
figuresParser/: CMakeLists.txt  FigureFileParser.h  SlawekFiguresParser.cpp  SlawekFiguresParser.h
test/: CMakeLists.txt  CircleTest.cpp  RectangleTest.cpp  RoundTest.cpp  SquareTest.cpp  TestFile.cpp  TriangleTest.cpp  Triangletest.cpp
